# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./products";
 export * from "./discounts";
 export * from "./orders";
+export * from "./customers";
